clear input (foutieve input bleef staan)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+        <div id="snow"></div>
         <div class="wrapper">
         <a href="php/pagina2.php"><button  class="knopje">Start</button></a>
         <img src="img/index.png" alt="penguin" class="penguin">
