--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
         <div id="snow"></div>
         <div class="wrapper">
-        <a href="php/pagina2.php"><button  class="knopje">Start</button></a>
+        <a href="php/keuze.php"><button  class="knopje">Start</button></a>
         <img src="img/index.png" alt="penguin" class="penguin">
     </div>
   
